syntax = "proto3";

package io.coursetrackr.proto;

option java_multiple_files = true;

message TokenRequest { }

message TokenResponse {
    string token = 1;
}

service TokenService {
    rpc token(TokenRequest) returns (TokenResponse);
}